--- a/stylesheets/wide.css
+++ b/stylesheets/wide.css
@@ -1,1 +1,1 @@
-section{width:20%}
+section{width:20%}section:nth-child(4){clear:none}
